		  of streamed features that are stored in memory and returned as a
		  CFeatures* object of corresponding type. See
		  CStreamingFeatures::get_streamed_features().
		- New concept of artificial data generator classes: Based on streaming
		  features. First implemented instance is CMeanShiftDataGenerator.
		  Use above new concepts to get non-streaming data if desired.
		- Accelerated projected gradient multiclass logistic regression classifier by Sergey Lisitsyn  
	* Bugfixes:
		- Fix for shallow copy of gaussian kernel by Matt Aasted
		- Fixed a bug when using StringFeatures along with kernel machines in
		  cross-validation which cause an assertion error. Thanks to Eric (yoo)!
	* Cleanup and API Changes:
		- SGString and SGStringList are now based on SGReferencedData
		- "confidences" in context of CLabel and subclasses are now "values"
		- CLinearTimeMMD constructor changes, only streaming features allowed
		- CDataGenerator will soon be removed and replaced by new streaming-
		  based classes.

2012-09-01 Soeren Sonnenburg <sonne@debian.org>

	* SHOGUN Release version 2.0.0 (libshogun 12.0, data 0.4, parameter 1)
	* This release also contains several enhancements, cleanups and bugfixes:
	* Features:
		- This release contains first release of Efficient Dimensionality Reduction Toolkit (EDRT).
		- Support for new SWIG -builtin python interface feature (SWIG 2.0.4 is required now).
		- EDRT algorithms are now available using static interfaces such as matlab and octave.
		- Jensen-Shannon kernel and Homogeneous kernel map preprocessor (thanks to Viktor Gal).
		- New 'multiclass' module for multiclass classification algorithms, generic linear
		  and kernel multiclass machines, multiclass LibLinear and OCAS wrappers,
		  new rejection schemes concept by Sergey Lisitsyn.
		- Various multitask learning algorithms including L1/Lq multitask group lasso logistic regression
		  and least squares regression, L1/L2 multitask tree guided group lasso logistic regression 